<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:contentDescription="@string/my_profile_picture"
                android:padding="15dp"
                app:srcCompat="@mipmap/my_pic" />

            <TextView
                android:id="@+id/tvMyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/my_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp" />

            <!--Divider-->
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_track"
                    android:contentDescription="@string/track"/>

                <TextView
                    android:id="@+id/tvMyTrack"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="5"
                    android:fontFamily="serif"
                    android:text="@string/my_track"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_country"
                    android:contentDescription="@string/country"/>

                <TextView
                    android:id="@+id/tvMyCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="5"
                    android:fontFamily="serif"
                    android:text="@string/my_country"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_email"
                    android:contentDescription="@string/my_email"/>

                <TextView
                    android:id="@+id/tvMyEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="5"
                    android:fontFamily="serif"
                    android:text="@string/my_email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_phone"
                    android:contentDescription="@string/my_phone_number"/>

                <TextView
                    android:id="@+id/tvMyPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="serif"
                    android:text="@string/my_phone_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:src="@mipmap/slack_logo"
                    android:contentDescription="@string/slack_logo"/>

                <TextView
                    android:id="@+id/tvMySlackUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="serif"
                    android:text="@string/my_slack_username"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_20sp" />

            </LinearLayout>

            <!--Divider-->
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>