<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="serif"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_alc"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:drawableStart="@android:drawable/ic_dialog_info"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@android:color/white"
        android:onClick="onClickButton"/>

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_person"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/my_profile"
        android:textColor="@android:color/white"
        android:onClick="onClickButton"/>

</LinearLayout>